fixed the construction of two cards and double scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,15 @@
     font-family: OpenSans, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    max-width: 100%;
 }
 
-html, body{
-    width: 100%;
-    height: 100%;
+html, body {
     overflow-x: hidden;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
-
 
 @font-face {
     font-family: OpenSans;
@@ -36,6 +37,11 @@ ul {
     list-style-type: none;
     text-decoration: none;
     list-style: none;
+}
+
+.wrapper {
+    overflow-y: hidden;
+    width: 100%;
 }
 
 /* Hidden elements */
@@ -220,7 +226,7 @@ textarea.field:focus {
 /* Header */
 .header {
     position: relative;
-    width: 100%;
+    min-width: 100%;
     height: 450px;
     overflow: hidden;
 }
@@ -229,7 +235,7 @@ textarea.field:focus {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     z-index: 1;
 }
@@ -534,7 +540,7 @@ textarea.field:focus {
     padding: 0 15px;
     margin: 63px auto 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .main__section {
@@ -997,9 +1003,9 @@ textarea.field:focus {
 /* Footer */
 .footer {
     max-width: 1200px;
-    margin: 94px auto 0 auto;
+    margin: 64px auto 0 auto;
     padding: 0 15px 20px;
-    height: 82px;
+    height: 215px;
 }
 
 .social__networks {
@@ -1086,9 +1092,8 @@ textarea.field:focus {
     }
 }
 
-@media (min-width: 641px) and (max-width: 758px) {
-    .products__main__container {
-        display: flex;
+@media (min-width: 641px) and (max-width: 767px) {
+    .products__main__container:nth-child(2n+1) {
         justify-content: center !important;
     }
 }
@@ -1266,10 +1271,11 @@ textarea.field:focus {
     }
 }
 
+
 /* Two products cards */
-@media (min-width: 761px) and (max-width: 1199px) {
+@media (min-width: 641px) and (max-width: 1199px) {
     .product__item {
-        width: calc(50% - 10px);
+        width: 50%;
     }
 
     .burger__menu-container {
@@ -1565,6 +1571,7 @@ textarea.field:focus {
         margin: 45px auto 45px;
     }
 }
+
 
 .burger__menu-container {
     display: none;
